<?xml version="1.0"?>
<package format="2">
  <name>sick_safetyscanners</name>
  <version>1.1.0</version>
  <description>Provides an Interface to read the sensor output of a SICK
  Safety Scanner</description>

  <maintainer email="puck@fzi.de">Lennart Puck</maintainer>

  <author>Lennart Puck</author>

  <license>ALv2</license>

  <depend>diagnostic_updater</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>pluginlib</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
